<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        tools:context=".ItemListFragment">

    <TextView
            android:id="@+id/item_name"
            style="@style/Widget.Inventory.Header"
            android:layout_marginStart="@dimen/margin_between_elements"
            android:text="@string/item"
            app:layout_constraintEnd_toStartOf="@+id/item_price"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/item_price"
            style="@style/Widget.Inventory.Header"
            android:layout_below="@+id/item_name"
            android:layout_marginStart="@dimen/margin_between_elements"
            android:text="@string/price"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/item_shop"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/item_name"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/item_shop"
            style="@style/Widget.Inventory.Header"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin_between_elements"
            android:text="@string/item_shop"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/item_price"
            app:layout_constraintTop_toTopOf="parent" />

    <View
            android:id="@+id/divider"
            style="@style/Divider"
            android:layout_marginTop="@dimen/margin_between_elements"
            app:layout_constraintBottom_toTopOf="@+id/scrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_shop" />

    <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/scrollView"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />
    </HorizontalScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_between_elements"
            android:layout_marginBottom="@dimen/margin_between_elements"
            android:contentDescription="@string/add_new_item"
            android:src="@android:drawable/ic_input_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>