<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        tools:context="com.benb.inventory.ui.ItemDetailFragment">

    <TextView
            android:id="@+id/item_name"
            style="@style/Widget.Inventory.TextView"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Screwdrivers" />

    <TextView
            android:id="@+id/item_price"
            style="@style/Widget.Inventory.TextView"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_name"
            tools:text="$5.50" />

    <TextView
            android:id="@+id/item_shop_label"
            style="@style/Widget.Inventory.TextView"
            android:layout_width="wrap_content"
            android:text="@string/shop"
            app:layout_constraintBaseline_toBaselineOf="@+id/item_shop"
            app:layout_constraintEnd_toStartOf="@+id/item_shop"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/item_shop"
            style="@style/Widget.Inventory.TextView"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/margin_between_elements"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintStart_toEndOf="@+id/item_shop_label"
            app:layout_constraintTop_toBottomOf="@+id/item_price"
            tools:text="Lidl" />

    <TextView
            android:id="@+id/item_quantity"
            style="@style/Widget.Inventory.TextView"
            android:layout_width="0dp"
            app:layout_constraintStart_toEndOf="@+id/item_quantity_label"
            tools:text="1.00"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/item_quantity_label"
            android:layout_marginStart="8dp" />

    <TextView
            android:id="@+id/item_value"
            style="@style/Widget.Inventory.TextView"
            android:layout_width="0dp"
            app:layout_constraintStart_toEndOf="@+id/item_value_label"
            tools:text="1.00"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/item_value_label" />

    <TextView
            android:id="@+id/item_quantity_label"
            style="@style/Widget.Inventory.TextView"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintStart_toStartOf="@+id/item_shop_label"
            app:layout_constraintTop_toBottomOf="@+id/item_shop_label"
            android:text="@string/quantity" />

    <!-- <Button
        android:id="@+id/sell_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/sell"
        app:layout_constraintBottom_toTopOf="@+id/delete_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_shop" /> -->

    <TextView
            android:id="@+id/item_value_label"
            style="@style/Widget.Inventory.TextView"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="@+id/item_shop_label"
            app:layout_constraintTop_toBottomOf="@+id/item_quantity_label"
            android:text="@string/value"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

    <Button
            android:id="@+id/delete_item"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/item_value"
            android:layout_marginTop="32dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_between_elements"
            android:layout_marginBottom="@dimen/margin_between_elements"
            android:contentDescription="@string/edit_item"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>


